# caelix

./: .gitignore  AGENTS.md  AI_REFERENCE.md  Cargo.toml  DECISIONS.md  README.md  book.toml
.github/workflows/: docs.yml
avera/: Cargo.toml
avera/src/: app.rs  lib.rs  main.rs
crates/caelix/: Cargo.toml  README.md
crates/caelix-actix/: Cargo.toml  README.md
crates/caelix-actix/src/: application.rs  lib.rs  request_payload.rs  test_app.rs  websocket.rs
crates/caelix-actix/src/actix_ws/: mod.rs  session.rs  stream.rs
crates/caelix-axum/: Cargo.toml  README.md
crates/caelix-axum/src/: application.rs  lib.rs  request_payload.rs  test_app.rs  websocket.rs
crates/caelix-cli/: Cargo.toml  README.md
crates/caelix-cli/src/: lib.rs  main.rs
crates/caelix-cli/tests/: generation.rs
crates/caelix-core/: Cargo.toml  README.md
crates/caelix-core/src/: cache.rs  container.rs  context.rs  controller.rs  cookie.rs  events.rs  exception.rs  guard.rs  interceptor.rs  lib.rs  logging.rs  microservice.rs  module.rs  openapi.rs  response.rs  result.rs  upload.rs  websocket.rs
crates/caelix-core/tests/: core.rs  module_graph_regressions.rs  module_validation.rs  trybuild.rs
crates/caelix-core/tests/ui/: event_handler_for_wrong_event.rs  event_handler_for_wrong_event.stderr  event_handler_missing_registerable.rs  event_handler_missing_registerable.stderr  injectable_requires_dependencies.rs  injectable_requires_dependencies.stderr
crates/caelix-macros/: Cargo.toml  README.md
crates/caelix-macros/src/: controller.rs  gateway.rs  injectable.rs  lib.rs  microservice.rs
crates/caelix-macros/tests/: injectable_runtime.rs  trybuild.rs
crates/caelix-macros/tests/ui/: controller_rejects_invalid_upload_validator.rs  controller_rejects_invalid_upload_validator.stderr  controller_rejects_missing_upload_validator.rs  controller_rejects_missing_upload_validator.stderr  controller_rejects_pattern_extractor.rs  controller_rejects_pattern_extractor.stderr  controller_with_extractors.rs  injectable_named_struct.rs  injectable_rejects_non_arc_field.rs  injectable_rejects_non_arc_field.stderr  injectable_rejects_tuple_struct.rs  injectable_rejects_tuple_struct.stderr  injectable_unit_struct.rs
crates/caelix-microservices/: Cargo.toml
crates/caelix-microservices/examples/: nestjs_redis_request_client.rs  nestjs_request_client.rs
crates/caelix-microservices/src/: lib.rs  redis_transport.rs
crates/caelix-socketio/: Cargo.toml  README.md
crates/caelix-socketio/src/: lib.rs
crates/caelix/examples/: jetstream_event_probe.rs  redis_event_probe.rs  upload_validation_server.rs
crates/caelix/src/: lib.rs
crates/caelix/tests/: actix_main.rs  axum_application.rs  cookies.rs  guard_visibility.rs  microservices.rs  openapi.rs  prelude.rs  socketio.rs  test_application.rs  uploads.rs  validation.rs  websocket_gateway.rs
crates/caelix/tests/socketio_client/: ack-and-error.js  package-lock.json  package.json
docs/src/: SUMMARY.md  introduction.md
docs/src/advanced/: application-runtime.md  axum.md  cache.md  events.md  guards-and-interceptors.md  lifecycle-hooks.md  microservices-nats.md  microservices.md  multipart-uploads.md  openapi.md  request-context.md  websockets.md
docs/src/cli/: guide.md  reference.md
docs/src/concepts/: controllers.md  modules.md  providers.md  responses-and-errors.md
docs/src/getting-started/: minimal-application.md  overview.md  project-layout.md
docs/src/recipes/: common-tasks.md  testing.md
docs/src/reference/: design-decisions.md  error-response-shape.md  feature-flags.md  macros.md  registration-and-lifecycle.md  traits.md
examples/events/: Cargo.toml
examples/events/src/: lib.rs  main.rs
examples/events/tests/: events.rs
examples/hello-world/: Cargo.toml
examples/hello-world/src/: lib.rs  main.rs
examples/hello-world/tests/: app.rs
examples/nestjs-nats-interoperability/: README.md  docker-compose.yml  package.json  tsconfig.json
examples/nestjs-nats-interoperability/src/: app.controller.ts  app.module.ts  caelix-nats.strategy.ts  main.ts
examples/nestjs-redis-interoperability/: README.md  package.json  tsconfig.json
examples/nestjs-redis-interoperability/src/: caelix-redis.strategy.ts  main.ts
examples/redis-microservices/: README.md
examples/sqlx-crud/: Cargo.toml
examples/sqlx-crud/src/: lib.rs  main.rs
examples/sqlx-crud/tests/: users.rs
