[package]
name = "avera"
version = "0.1.0"
edition = "2024"

[workspace]

[dependencies]
actix-web = "4.14.0"
caelix = { path = "../crates/caelix", features = ["actix"] }
caelix-core = { path = "../crates/caelix-core" }
caelix-actix = { path = "../crates/caelix-actix" }
serde = { version = "1.0.228", features = ["derive"] }
