[package]
name = "caelix-actix"
version = "0.0.10"
edition = "2024"
description = "Actix Web runtime adapter for Caelix."
license = "MIT"

[dependencies]
actix-http = "3.11.0"
actix-web = "4.14.0"
bytes = "1.10.1"
caelix-core = { path = "../caelix-core", version = "0.0.7" }
futures-util = { version = "0.3.31", default-features = false, features = ["std"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
num_cpus = "1"
[dev-dependencies]
uuid = { version = "1.19.0", features = ["serde"] }
