[package]
name = "caelix-axum"
version = "0.0.18"
edition = "2024"
description = "Axum runtime adapter for Caelix."
license = "MIT"
repository = "https://github.com/Ohanronnie/caelix"
homepage = "https://ohanronnie.github.io/caelix/"
documentation = "https://docs.rs/caelix-axum"
readme = "README.md"

[features]
socketio = ["dep:caelix-socketio"]
openapi = ["caelix-core/openapi"]

[dependencies]
axum = { version = "0.8.8", features = ["ws"] }
bytes = "1.10.1"
caelix-core = { path = "../caelix-core", version = "0.0.14" }
caelix-socketio = { path = "../caelix-socketio", version = "0.0.17", optional = true }
futures-util = { version = "0.3.31", default-features = false, features = ["std", "sink"] }
http = "1.4.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.47.1", features = ["macros", "net", "rt", "rt-multi-thread", "signal"] }
tower = { version = "0.5.3", features = ["util"] }
uuid = { version = "1.19.0", features = ["v4"] }

[dev-dependencies]
http-body-util = "0.1.3"
tower = { version = "0.5.3", features = ["util"] }
tower-http = { version = "0.6.8", features = ["compression-full", "trace"] }
