[package]
name = "caelix-cli"
version = "0.0.5"
edition = "2024"
description = "Command line generator for Caelix applications."
license = "MIT"

[[bin]]
name = "caelix"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
heck = "0.5.0"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde_json = "1.0.150"
toml_edit = "0.22"

[dev-dependencies]
tempfile = "3.27.0"
