[package]
name = "caelix-cli"
version = "0.0.10"
edition = "2024"
description = "Command line generator for Caelix applications."
license = "MIT"

[[bin]]
name = "caelix"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
ctrlc = "3.5.1"
heck = "0.5.0"
notify = "6"
notify-debouncer-mini = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde_json = "1.0.150"
toml_edit = "0.22"

[dev-dependencies]
tempfile = "3.27.0"
