[package]
name = "caelix-core"
version = "0.1.0"
edition = "2024"
description = "Core primitives for the Caelix framework."
license = "MIT"

[lib]
path = "src/lib.rs"

[features]
default = []
sqlx = ["dep:sqlx"]
validator = ["dep:validator"]

[dependencies]
anyhow = "1.0.103"
chrono = { version = "0.4.42", default-features = false, features = ["clock"] }
http = "1.4.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sqlx = { version = "0.8.6", optional = true, default-features = false }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
validator = { version = "0.20", optional = true }

[dev-dependencies]
trybuild = "1.0.114"
