[package]
name = "caelix-core"
version = "0.0.14"
edition = "2024"
description = "Core primitives for the Caelix framework."
license = "MIT"
repository = "https://github.com/Ohanronnie/caelix"
homepage = "https://ohanronnie.github.io/caelix/"
documentation = "https://docs.rs/caelix-core"
readme = "README.md"

[lib]
path = "src/lib.rs"

[features]
default = ["sqlx", "validator"]
sqlx = ["dep:sqlx"]
validator = ["dep:validator"]
openapi = ["dep:utoipa"]

[dependencies]
anyhow = "1.0.103"
bytes = "1.10.1"
crossbeam-channel = "0.5.16"
futures-core = "0.3.31"
futures-util = { version = "0.3.31", default-features = false, features = ["std"] }
http = "1.4.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sqlx = { version = "0.8.6", optional = true, default-features = false }
tokio = { version = "1.47.1", features = ["fs", "io-util", "sync"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
tokio-util = { version = "0.7.16", features = ["io"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
validator = { version = "0.20", optional = true }
utoipa = { version = "5.5.0", optional = true }

[dev-dependencies]
tokio = { version = "1.47.1", features = ["fs", "io-util", "macros", "rt", "rt-multi-thread", "sync", "time"] }
trybuild = "1.0.117"
