[package]
name = "caelix-core"
version = "0.0.20"
edition = "2024"
description = "Core primitives for the Caelix framework."
license = "MIT"
repository = "https://github.com/Ohanronnie/caelix"
homepage = "https://ohanronnie.github.io/caelix/"
documentation = "https://docs.rs/caelix-core"
readme = "README.md"

[lib]
path = "src/lib.rs"

[features]
default = []
sqlx = ["dep:sqlx"]
validator = ["dep:validator"]
openapi = ["dep:utoipa"]
uploads = ["dep:infer", "dep:multer"]

[dependencies]
anyhow = "1.0.103"
bytes = "1.10.1"
cookie = { version = "0.18.1", features = ["percent-encode"] }
crossbeam-channel = "0.5.16"
futures-core = "0.3.31"
futures-util = { version = "0.3.31", default-features = false, features = ["std"] }
http = "1.4.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serde_html_form = "0.2.7"
sqlx = { version = "0.8.6", optional = true, default-features = false }
tokio = { version = "1.47.1", features = ["fs", "io-util", "sync"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
tokio-util = { version = "0.7.16", features = ["io", "rt"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
validator = { version = "0.20", optional = true }
utoipa = { version = "5.5.0", optional = true }
infer = { version = "0.19.0", optional = true }
multer = { version = "3.1.0", optional = true }
url = "2.5.8"

[dev-dependencies]
tokio = { version = "1.47.1", features = ["fs", "io-util", "macros", "rt", "rt-multi-thread", "sync", "time"] }
trybuild = "1.0.117"
