[package]
name = "caelix-macros"
version = "0.0.5"
edition = "2024"
description = "Procedural macros for the Caelix framework."
license = "MIT"

[lib]
proc-macro = true

[dev-dependencies]
actix-web = "4.14.0"
caelix-actix = { path = "../caelix-actix", version = "0.0.9" }
caelix-core = { path = "../caelix-core", version = "0.0.6" }
serde = { version = "1.0.228", features = ["derive"] }
trybuild = "1.0.117"

[dependencies]
proc-macro2 = "1.0.106"
quote = "1.0.46"
syn = { version = "2.0.118", features = ["full"] }
