[package]
name = "caelix-macros"
version = "0.0.16"
edition = "2024"
description = "Procedural macros for the Caelix framework."
license = "MIT"
repository = "https://github.com/Ohanronnie/caelix"
homepage = "https://ohanronnie.github.io/caelix/"
documentation = "https://docs.rs/caelix-macros"
readme = "README.md"

[lib]
proc-macro = true

[features]
default = ["actix"]
actix = []
axum = []
openapi = []
uploads = []

[dev-dependencies]
actix-web = "4.14.0"
caelix-actix = { path = "../caelix-actix", version = "0.0.23" }
caelix-core = { path = "../caelix-core", version = "0.0.20" }
serde = { version = "1.0.228", features = ["derive"] }
trybuild = "1.0.117"

[dependencies]
proc-macro2 = "1.0.106"
quote = "1.0.46"
syn = { version = "2.0.118", features = ["full"] }
