[package]
name = "caelix-microservices"
version = "0.0.1"
edition = "2024"
description = "NATS and Redis microservice transports for Caelix."
license = "MIT"
repository = "https://github.com/Ohanronnie/caelix"

[features]
default = ["nats"]
nats = []
redis = ["dep:redis"]

[dependencies]
async-nats = "0.38.0"
redis = { version = "1.4.1", optional = true, features = ["tokio-comp", "connection-manager", "streams"] }
caelix-core = { path = "../caelix-core", version = "0.0.21" }
futures-util = { version = "0.3.31", default-features = false, features = ["std"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.10.9"
thiserror = "2.0.18"
tokio = { version = "1.47.1", features = ["macros", "rt", "signal", "sync", "time"] }
tokio-util = { version = "0.7.16", features = ["rt"] }
uuid = { version = "1.19.0", features = ["v4"] }

[[example]]
name = "nestjs_redis_request_client"
required-features = ["redis"]
