[package]
name = "caelix-socketio"
version = "0.0.14"
edition = "2024"
description = "Socket.IO integration for the Axum Caelix runtime."
license = "MIT"

[dependencies]
caelix-core = { path = "../caelix-core", version = "0.0.11" }
serde = { version = "1.0.228", features = ["derive"] }
socketioxide = "=0.18.5"
