[package]
name = "caelix-socketio"
version = "0.0.15"
edition = "2024"
description = "Socket.IO integration for the Axum Caelix runtime."
license = "MIT"
repository = "https://github.com/Ohanronnie/caelix"
homepage = "https://ohanronnie.github.io/caelix/"
documentation = "https://docs.rs/caelix-socketio"

[dependencies]
caelix-core = { path = "../caelix-core", version = "0.0.12" }
serde = { version = "1.0.228", features = ["derive"] }
socketioxide = "=0.18.5"
