[package]
name = "caelix"
version = "0.0.10"
edition = "2024"
description = "Public Caelix framework crate."
license = "MIT"

[features]
default = ["actix", "sqlx", "validator"]
actix = ["dep:caelix-actix"]
sqlx = ["caelix-core/sqlx"]
validator = ["caelix-core/validator"]

[dependencies]
caelix-actix = { path = "../caelix-actix", version = "0.0.10", optional = true }
caelix-core = { path = "../caelix-core", version = "0.0.7" }
caelix-macros = { path = "../caelix-macros", version = "0.0.5" }

[lib]
path = "src/lib.rs"

[dev-dependencies]
actix-web = "4.14.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
validator = { version = "0.20", features = ["derive"] }
