[package]
name = "caelix"
version = "0.0.18"
edition = "2024"
description = "Public Caelix framework crate."
license = "MIT"
repository = "https://github.com/Ohanronnie/caelix"
homepage = "https://ohanronnie.github.io/caelix/"
documentation = "https://docs.rs/caelix"
readme = "README.md"

[features]
default = ["actix", "sqlx", "validator"]
actix = ["dep:caelix-actix", "caelix-macros/actix"]
axum = ["dep:caelix-axum", "caelix-macros/axum"]
socketio = ["axum", "caelix-axum/socketio", "dep:caelix-socketio"]
sqlx = ["caelix-core/sqlx"]
validator = ["caelix-core/validator"]
openapi = ["caelix-core/openapi", "caelix-macros/openapi", "caelix-actix?/openapi", "caelix-axum?/openapi"]

[dependencies]
caelix-actix = { path = "../caelix-actix", version = "0.0.16", optional = true }
caelix-axum = { path = "../caelix-axum", version = "0.0.17", optional = true }
caelix-socketio = { path = "../caelix-socketio", version = "0.0.16", optional = true }
caelix-core = { path = "../caelix-core", version = "0.0.13" }
caelix-macros = { path = "../caelix-macros", version = "0.0.11", default-features = false }

[lib]
path = "src/lib.rs"

[dev-dependencies]
actix-web = "4.14.0"
http-body-util = "0.1.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tower = { version = "0.5.3", features = ["util"] }
futures-util = { version = "0.3.31", default-features = false, features = ["sink"] }
tokio-tungstenite = "0.29.0"
validator = { version = "0.20", features = ["derive"] }
