[package]
name = "caelix"
version = "0.0.26"
edition = "2024"
description = "Public Caelix framework crate."
license = "MIT"
repository = "https://github.com/Ohanronnie/caelix"
homepage = "https://ohanronnie.github.io/caelix/"
documentation = "https://docs.rs/caelix"
readme = "README.md"

[features]
default = ["actix"]
actix = ["dep:caelix-actix", "caelix-macros/actix"]
axum = ["dep:caelix-axum", "caelix-macros/axum"]
socketio = ["axum", "caelix-axum/socketio", "dep:caelix-socketio"]
sqlx = ["caelix-core/sqlx"]
validator = ["caelix-core/validator"]
openapi = ["caelix-core/openapi", "caelix-macros/openapi", "caelix-actix?/openapi", "caelix-axum?/openapi"]
uploads = ["caelix-core/uploads", "caelix-macros/uploads", "caelix-actix?/uploads", "caelix-axum?/uploads"]
microservices-nats = ["dep:caelix-microservices", "caelix-microservices/nats", "dep:tokio", "caelix-macros/microservices", "caelix-macros/tokio"]
microservices-redis = ["dep:caelix-microservices", "caelix-microservices/redis", "dep:tokio", "caelix-macros/microservices", "caelix-macros/tokio"]

[dependencies]
caelix-actix = { path = "../caelix-actix", version = "0.0.24", optional = true, default-features = false }
caelix-axum = { path = "../caelix-axum", version = "0.0.25", optional = true, default-features = false }
caelix-socketio = { path = "../caelix-socketio", version = "0.0.24", optional = true }
caelix-core = { path = "../caelix-core", version = "0.0.21", default-features = false }
caelix-macros = { path = "../caelix-macros", version = "0.0.17", default-features = false }
caelix-microservices = { path = "../caelix-microservices", version = "0.0.1", optional = true, default-features = false }
tokio = { version = "1.47.1", optional = true, features = ["rt-multi-thread"] }

[lib]
path = "src/lib.rs"

[[example]]
name = "upload_validation_server"
required-features = ["actix", "uploads"]

[[example]]
name = "jetstream_event_probe"
required-features = ["microservices-nats"]

[[example]]
name = "redis_event_probe"
required-features = ["microservices-redis"]

[dev-dependencies]
actix-web = { version = "4.14.0", default-features = false, features = ["macros", "ws"] }
http-body-util = "0.1.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tower = { version = "0.5.3", features = ["util"] }
futures-util = { version = "0.3.31", default-features = false, features = ["sink"] }
tokio-tungstenite = "0.29.0"
validator = { version = "0.20", features = ["derive"] }
