[package]
name = "sqlx-crud"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.14.0"
caelix = { path = "../../crates/caelix" }
caelix-actix = { path = "../../crates/caelix-actix" }
caelix-core = { path = "../../crates/caelix-core", features = ["sqlx", "validator"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio-rustls", "sqlite", "macros"] }
validator = { version = "0.20", features = ["derive"] }
